feat: :sparkles: added new table to backend
